fix for overflow issue

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -1233,7 +1233,7 @@ Rarities
     grid-template: auto / repeat(auto-fill, minmax(275px, 1fr));
     grid-auto-rows: auto;
     grid-gap: 10px;
-    margin: 10px;
+    margin: 10px 20px 10px 10px;
 }
 
 .brecipeTable {
